<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_bg_light">

    <com.hyphenate.easeui.widget.EaseImageView
        android:id="@+id/iv_user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_name"
        android:scaleType="fitCenter"
        android:layout_marginBottom="7dp"
        app:ease_shape_type="round"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_id"
        android:drawableEnd="@drawable/icon_user_info_edit"
        android:layout_marginBottom="7dp"
        android:drawablePadding="4dp"
        android:textStyle="bold"
        tools:text="Json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/center_layout"
        android:layout_marginBottom="72dp"
        tools:text="123456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/center_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/demo_about_me_item_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.hyphenate.easeui.widget.EaseArrowItemView
            android:id="@+id/about_official_website"
            app:layout_constraintTop_toBottomOf="@+id/tv_kit_version"
            app:arrowItemTitle="@string/em_about_official_website"
            app:arrowItemContent="@string/em_about_official_website_url"
            app:arrowItemContentColor="@color/ease_color_primary"
            style="@style/em_about_me_item"
            app:arrowItemShowArrow="true"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>

        <com.hyphenate.easeui.widget.EaseArrowItemView
            android:id="@+id/about_business_cooperation"
            app:layout_constraintTop_toBottomOf="@+id/tv_kit_version"
            app:arrowItemTitle="@string/em_about_business_cooperation"
            app:arrowItemContent="@string/em_about_business_cooperation_number"
            app:arrowItemContentColor="@color/ease_color_primary"
            style="@style/em_about_me_item"
            app:arrowItemShowArrow="true"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>

        <com.hyphenate.easeui.widget.EaseArrowItemView
            android:id="@+id/about_logout"
            app:layout_constraintTop_toBottomOf="@+id/tv_kit_version"
            app:arrowItemTitle="@string/em_about_logout"
            style="@style/em_about_me_item2"
            app:arrowItemShowArrow="true"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>